kubernetes/base/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    service: app
status:
  loadBalancer: {}
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    service: app
