kubernetes/base/service.rendertron.yml
apiVersion: v1
kind: Service
metadata:
  name: rendertron
  labels:
    service: rendertron
status:
  loadBalancer: {}
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    service: rendertron
