kubernetes/base/admin.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-admin-ingress
  namespace: ${NAMESPACE}
  labels:
    service: redirect
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/issue-temporary-certificate: 'true'
    kubernetes.io/ingress.class: haproxy
    ingress.kubernetes.io/redirect-to: "https://login.kupaliska.${DEPLOYMENT_ENV}bratislava.sk"
spec:
  tls:
    - hosts:
        - kupaliska.${DEPLOYMENT_ENV}bratislava.sk
        - www.kupaliska.${DEPLOYMENT_ENV}bratislava.sk
      secretName: tls
  rules:
    - host: kupaliska.${DEPLOYMENT_ENV}bratislava.sk
      http:
        paths:
          - path: /admin
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${BUILD_REPOSITORY_NAME}-app
                port:
                  number: 80
    - host: www.kupaliska.${DEPLOYMENT_ENV}bratislava.sk
      http:
        paths:
          - path: /admin
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${BUILD_REPOSITORY_NAME}-app
                port:
                  number: 80
