kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ${NAMESPACE}
  labels:
    service: app
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns01
    cert-manager.io/issue-temporary-certificate: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        # $DEPLOYMENT_ENV => dev./staging./""
        - kupaliska.${DEPLOYMENT_ENV}bratislava.sk
        - www.kupaliska.${DEPLOYMENT_ENV}bratislava.sk
      secretName: tls
  rules:
    - host: kupaliska.${DEPLOYMENT_ENV}bratislava.sk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: app
                port:
                  number: 80
    - host: www.kupaliska.${DEPLOYMENT_ENV}bratislava.sk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: app
                port:
                  number: 80
